--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+# Core Bot Dependencies
 discord.py==2.3.2
-openai==1.30.1
 python-dotenv==1.0.1
+
+# Google Sheets API
 gspread==6.0.2
 oauth2client==4.1.3
+
+# OpenAI SDK (compatible with chat.completions.create)
+openai==1.12.0
+uvicorn==0.29.0
