--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,6 @@ oauth2client==4.1.3
 # OpenAI SDK (compatible with chat.completions.create)
 openai==1.12.0
 uvicorn==0.29.0
+
+# Natural Language Date Parsing
+dateparser==1.1.8
