--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,12 @@ python-dotenv==1.0.1
 gspread==6.0.2
 oauth2client==4.1.3
 
-# OpenAI SDK (compatible with chat.completions.create)
+# OpenAI (latest compatible)
 openai==1.12.0
-uvicorn==0.29.0
+httpx==0.27.0
 
 # Natural Language Date Parsing
 dateparser==1.1.8
+
+# Uvicorn (not used, but harmless if kept)
+uvicorn==0.29.0
